<resources>
    <string name="app_name">Pokemon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokemon_name">pokemon name</string>

    <string name="pokemon_image">Pokemon Image</string>
    <string name="type">Type:</string>
    <string name="hp">Hp:</string>
    <string name="speed">Speed:</string>
    <string name="attack">Attack:</string>
    <string name="defense">Defense:</string>
    <string name="special_attack">Special Attack:</string>
    <string name="special_defense">Special Defense:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="metro"> %sm</string>
    <string name="kilo"> %skg</string>
    <string name="pokemon_type">electric</string>
    <string name="pokemon_weight">Total weight</string>
    <string name="pokemon_height">Total Height</string>
    <string name="return_screen">Return to pokemon list</string>
    <string name="try_again">Try again</string>
    <string name="no_internet_connection">No Internet connection!!!</string>
    <string name="weight_format">%1$d g</string>
    <string name="height_format">%1$d sm</string>
    <string name="pokemon_id">№ %1$d</string>

</resources>