<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.PokemonInfo">

    <TextView
        android:id="@+id/tv_pokemon_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/text_24sp"
        android:text="@string/pokemon_name"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/iv_pokemon_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pokemon_name" />

    <TextView
        android:id="@+id/tv_pokemon_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16dp"
        android:text="@string/pokemon_type"
        android:textStyle="bold"
        android:textSize="@dimen/text_16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/iv_pokemon_image"
        app:layout_constraintEnd_toEndOf="@id/iv_pokemon_image"
        app:layout_constraintTop_toBottomOf="@id/iv_pokemon_image"
        />


    <ImageView
        android:id="@+id/iv_pokemon_weight"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_weight"
        app:layout_constraintEnd_toStartOf="@id/iv_pokemon_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pokemon_type" />

    <ImageView
        android:id="@+id/iv_pokemon_height"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:src="@drawable/ic_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pokemon_type"
        app:layout_constraintStart_toEndOf="@id/iv_pokemon_weight"
        />


    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokemon_weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/iv_pokemon_weight"
        app:layout_constraintEnd_toStartOf="@id/iv_pokemon_weight"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16sp" />



    <TextView
        android:id="@+id/tv_weight_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokemon_weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_pokemon_weight"
        app:layout_constraintEnd_toStartOf="@id/iv_pokemon_weight"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16sp" />

    <TextView
        android:id="@+id/tv_height_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokemon_height"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_pokemon_height"
        app:layout_constraintStart_toEndOf="@id/iv_pokemon_height"
        android:textSize="@dimen/text_16sp" />

    <TextView
        android:id="@+id/tv_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokemon_height"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_pokemon_height"
        app:layout_constraintStart_toEndOf="@id/iv_pokemon_height"
        android:textSize="@dimen/text_16sp" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/return_screen"
        app:layout_constraintStart_toStartOf="@id/iv_pokemon_weight"
        app:layout_constraintEnd_toEndOf="@id/iv_pokemon_height"
        app:layout_constraintTop_toBottomOf="@id/iv_pokemon_image"
        android:layout_marginTop="150dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>